feat: add onJoinServer — run commands on server connect
- OnJoinServerEntry: parsed from config, supports commands[], server (regex filter), delay (seconds), description
- FlowChatConfig: parse onJoinServer array alongside existing features
- FlowChatForge: hook FMLNetworkEvent.ClientConnectedToServerEvent, execute commands with optional delay
- Java 8 compat: Files.writeString → Files.write with getBytes
- 17 new JUnit tests (OnJoinServerEntryTest + OnJoinServerConfigTest)
- Example config: flowchat-spawn-on-join.json
- Fix processResources to properly expand mcmod.info version